fix elastic issue
Former-commit-id: 56687cc8cbbc31fe8cecfa80fa47753cee8595c0